<resources>

    <!-- Screen Element Labels -->
    <string name="app_name">SpotMe</string>
    <string name="app_logo">app_logo</string>
    <string name="action_sign_in_short">action_sign_in_short</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="spotme">SpotMe</string>
    <string name="sign_up">Sign Up</string>
    <string name="return_to_login">Already have an account? Login</string>

    <!-- Text Box Labels -->
    <string name="last_name">Last Name</string>
    <string name="new_username">Create A Username</string>
    <string name="new_password">Create Password</string>
    <string name="first_name">First Name</string>
    <string name="new_user_password">Re-enter Password</string>
    <string name="new_user_email">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user_phone">Phone Number</string>
    <string name="user_address">Mailing Address</string>

    <!-- Text Input tips text -->
    <string name="Email_tip">Enter Email Or Username</string>
    <string name="prompt_password_tip">Enter Password</string>
    <string name="new_user_email_tip">Email</string>
    <string name="new_confirm_password_tip">Passwords must match</string>
    <string name="new_password_tip">Password</string>
    <string name="new_first_name_tip">Legal First Name</string>
    <string name="new_username_tip">Username</string>
    <string name="last_name_tip">Legal Last Name</string>

    <!-- Requirements text -->
    <string name="confirm_password_requirements">Passwords Must Match</string>
    <string name="new_length_requirement"><![CDATA[
    - Must be at least 8 characters long\n
        ]]></string>
    <string name="new_capitol_requirement"><![CDATA[
    - Must contain: 1 Capitol letter\n
        ]]></string>
    <string name="new_special_requirement"><![CDATA[
    - Must contain: 1 Special character
        ]]></string>
    <string name="user_special_requirement"><![CDATA[
    - Can\'t contain: Special character
        ]]></string>
    <string name="new_digit_requirement"><![CDATA[
    - Must contain: 1 Number\n
        ]]></string>
    <string name="unique_username_requirements"><![CDATA[
    - Can not match email\n
        ]]></string>
    <string name="notifications">Notifications</string>
    <string name="d">d</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="todo">TODO</string>
    <string name="dark_mode_icon">dark_mode_icon</string>
    <string name="dark_mode">Dark mode</string>
    <string name="setting_icon">Setting Icon</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_icon">terms Icon</string>
    <string name="terms">Terms</string>
    <string name="cookies_icon">cookies Icon</string>
    <string name="cookies">Cookies</string>
    <string name="contact_icon">Contact Icon</string>
    <string name="contact">Contact</string>
    <string name="feedback_icon">Feedback Icon</string>
    <string name="feedback">Feedback</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="logout">Logout</string>
    <string name="loan_summary">Loan summary</string>
    <string name="active">Active</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="suggested_opportunities">Suggested Opportunities</string>
    <string name="rating_badge">Rating badge</string>
    <string name="all">All</string>
    <string name="this_week">This week</string>
    <string name="clear">Clear</string>

    <string name="repayment_prompt">Choose a repayment term</string>

    <string name="return_to_login_screen">return to login screen</string>
    <string name="reset_password_text">It’s okay, bad things happen. Please enter your email below and we’ll send you instructions to reset your password.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">Close</string>
    <string name="forgot_password_header">Forgot password</string>
    <string name="Forgot_password_Submit">Send Instructions</string>
    <string name="enter_email_hint_text">Enter Email</string>
    <string name="how_would_you_rate_us">How would you rate us?</string>
    <string name="send_feedback">Send feedback</string>
    <string name="tell_us_more_about_your_experience">Tell us more about your experience</string>
    <string name="submit">Submit</string>
    <string name="contact_us">CONTACT US</string>
    <string name="we_d_love_to_hear_from_you_drop_us_a_message_and_we_ll_connect_with_you_soon">We\'d love to hear from you! Drop us a message, and we\'ll connect with you soon.</string>
    <string name="name">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="message">Message</string>
    <string name="we_value_your_privacy">We value your privacy. This app does not collect personal information without your consent. Any data you provide is used solely for improving your experience and is not shared with third parties.</string>
    <string name="by_using_this_app_you_agree_to_the_terms">By using this app, you agree to the terms and conditions of use. The app is provided as-is without any warranties. We reserve the right to modify these terms at any time without prior notice.</string>
    <string name="this_app_may_use_cookies">This app may use cookies or similar technologies to enhance user experience, analyze usage, and improve performance. By using the app, you consent to the use of cookies as described.</string>
    <string name="send_us_your_feedback">Send us your feedback</string>
    <string name="MFA_Phone_Request_Text">Enter your Phone Number</string>
    <string name="MFAPhoneHint">+1 (123) 456 7890</string>
    <string name="MFA_verification_text">Send Verification</string>
    <string name="MFA_Notice">Notice:\n\nA valid phone number must be used.\nStandard text and data rates may apply!</string>

</resources>