<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_back_ground">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/spotme_logo" />

    <!-- Settings -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/settingsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <!-- Notifications -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_white_box"
                tools:ignore="UseSwitchCompatOrMaterialXml">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/notification_icon"
                    android:src="@drawable/notification_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:text="@string/notifications"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="16sp"/>

                <Switch
                    android:id="@+id/toggleNotificationId"
                    android:layout_width="64dp"
                    android:layout_height="32dp"/>
            </LinearLayout>

            <!-- Dark Mode -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_white_box">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/dark_mode_icon"
                    android:src="@drawable/darkmode_icon" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:text="@string/dark_mode"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="16sp"/>

                <Switch
                    android:id="@+id/toggleThemeId"
                    android:layout_width="64dp"
                    android:layout_height="32dp"/>
            </LinearLayout>

            <!-- Privacy policy-->
            <LinearLayout
                android:id="@+id/privacyPolicyAction"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_white_box">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/privacy_icon"
                    android:contentDescription="@string/setting_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/privacy_policy"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="16sp"/>
            </LinearLayout>

            <!-- Terms-->
            <LinearLayout
                android:id="@+id/termsAction"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_white_box">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/terms_icon"
                    android:contentDescription="@string/terms_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/terms"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_bold"/>
            </LinearLayout>

            <!-- Cookies-->
            <LinearLayout
                android:id="@+id/cookies"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_white_box">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/cookies_icon"
                    android:contentDescription="@string/cookies_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/cookies"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_bold" />
            </LinearLayout>

            <!-- Contact-->
            <LinearLayout
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_white_box">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/contact_icon"
                    android:contentDescription="@string/contact_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/contact"
                    android:textSize="16sp"
                    android:fontFamily="@font/inter_bold"/>
            </LinearLayout>

            <!-- Feedback-->
            <LinearLayout
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_white_box">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/feedback_icon"
                    android:contentDescription="@string/feedback_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/feedback"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="16sp"/>
            </LinearLayout>

            <!-- Logout-->
            <LinearLayout
                android:id="@+id/logoutAction"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="16dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingEnd="16dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_white_box">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/logout_icon"
                    android:contentDescription="@string/logout_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/logout"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
