<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_back_ground">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="342dp"
        android:layout_height="59dp"
        android:layout_marginTop="48dp"
        android:autofillHints="Email"
        android:background="@drawable/rounded_text"
        android:hint="@string/Email_tip"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:textColorHint="#263F53"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="342dp"
        android:layout_height="59dp"
        android:layout_marginTop="48dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password_tip"
            android:background="@drawable/rounded_text"
            android:hint="@string/prompt_password_tip"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColorHint="#263F53"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        style="@style/GradientButton"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="@null"
        android:fontFamily="@font/inter"
        android:radius="26dp"
        android:text="@string/action_sign_in"
        android:textColor="#263F53"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forgot_Password"
        app:layout_constraintVertical_bias="0.163"
        app:strokeColor="@color/Gray_900"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/Create_Account"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:background="#00FFFFFF"
        android:contextClickable="true"
        android:fontFamily="@font/inter"
        android:text="@string/action_create_account"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.466"
        app:strokeColor="#00FFFFFF"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/Forgot_Password"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:fontFamily="@font/inter"
        android:text="@string/action_forgot_password"
        android:textColor="@color/button_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        app:strokeColor="#00FFFFFF"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="411dp"
        android:layout_height="262dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/spotme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/new_logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/username"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter"
        android:text="@string/password"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>